Fixed issue with edit and delete not working in responsive table collapsed row.

--- a/public/app/assets/css/app.css
+++ b/public/app/assets/css/app.css
@@ -1,3 +1,7 @@
+html, body {
+	overflow-x: hidden !important;
+}
+
 .brew-app-header {
 	margin-bottom: 50px !important;
 }
